--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /src/wekimini/gui/VerticalLabelUI.java
 /src/wekimini/gui/LabeledButtonGrid1.java
 /src/wekimini/gui/LabeledButtonGrid1.form
+/nbproject/private/
