--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,8 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.javaosc.jar=lib/javaosc.jar
+file.reference.jsch-0.1.53.jar=lib/jsch-0.1.53.jar
+file.reference.mysql-connector-java-5.1.36-bin.jar=lib/mysql-connector-java-5.1.36-bin.jar
 file.reference.swing-worker-1.2.jar=lib/swing-worker-1.2.jar
 file.reference.weka.jar=lib/weka.jar
 file.reference.xmlpull-1.1.3.1.jar=lib/xmlpull-1.1.3.1.jar
@@ -48,7 +50,9 @@ javac.classpath=\
     ${file.reference.xstream-1.4.8.jar}:\
     ${file.reference.weka.jar}:\
     ${libs.swing-layout.classpath}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.jsch-0.1.53.jar}:\
+    ${file.reference.mysql-connector-java-5.1.36-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
